add routes for retrieving resources of one type
